--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Prismic",
   "dependencies": {
     "@prismicio/client": "^4.0.0",
-    "next": "^9.4.4",
-    "prismic-reactjs": "^1.3.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "js-cookie": "^3.0.1",
+    "next": "^11.1.2",
+    "prismic-reactjs": "^1.3.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "scripts": {
     "dev": "next dev",
